trying to add table

--- a/nationalPark.html
+++ b/nationalPark.html
@@ -29,6 +29,25 @@
     <input id="searchBox" type="text" placeholder="Search for park here">
     <ul id="searchOptions"></ul>
 
+    <table id="list">
+        <thead>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Address</th>
+            <th>Visit</th>
+            <th>Contact</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
+
     
 </body>
 </html>
