nationalpark seach implementaion finished

--- a/nationalPark.html
+++ b/nationalPark.html
@@ -20,18 +20,20 @@
     <header id="header">
         <nav id="nav"></nav>
     </header>
-    <select id="locationList"><p>By Location</p>
-        <option>Select a Location</option>
+    <p>By Location</p>
+    <select id="locationList">
+        <option value="any">Select a Location</option>
     </select>
-    <select id="parkList"><p>By Park Type</p>
-        <option>Select a Park Type</option>
+    <p>Or By Park Type</p>
+    <select id="parkList">
+        <option value="any">Select a Park Type</option>
     </select>
     <input id="searchBox" type="text" placeholder="Search for park here">
     <ul id="searchOptions"></ul>
 
     <table id="list">
         <thead>
-            <th>ID</th>
+           
             <th>Name</th>
             <th>Address</th>
             <th>Visit</th>
