--- a/mountain.html
+++ b/mountain.html
@@ -8,12 +8,18 @@
     <title>Mountains</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/mountain.css">
+    <script src="scripts/mountainData.js"></script>
     <script src="scripts/nav.js"></script>
+    <script src="scripts/mountain.js"></script>
 </head>
 <body>
     <header id="header">
         <nav id="nav"></nav>
     </header>
+
+    <select id="mountainList">
+        <option>Select a Mountain</option>
+    </select>
     
 
 
