--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="scripts/nav.js"></script>
 </head>
 <body>
+    <div id="banner">
+    <img src="banner.jpg">
+    </div>
     <header id="header">
         <nav id="nav"></nav>
     </header>
