--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
     <header id="header">
         <nav id="nav"></nav>
     </header>
-    <div id="gif">
-        <img src="giphy.gif">
-    </div>
-    <div class="content">
+    
+    <div class="main-content">
         <h1>Rediscover the Joys of Hiking Home: Exploring Nature's Pathways</h1>
 
         <p>
@@ -69,7 +67,7 @@
         each milestone is truly unparalleled.
         </p>
 
-        <h3>Environmental Stewardship:</h3>
+        <h3>Environmental Stewardship</h3>
         <p>
         As hikers, we have a responsibility to preserve and protect the natural environments we explore. Leave no trace
         behind, respect wildlife and their habitats, and follow ethical hiking practices. By practicing sustainability
