--- a/index.html
+++ b/index.html
@@ -13,74 +13,100 @@
 
 <body>
 
-    <header id="header">
-        <nav id="nav"></nav>
-    </header>
-    
+
     <div class="main-content">
-        <h1>Rediscover the Joys of Hiking Home: Exploring Nature's Pathways</h1>
+        <div class="content">
+            <h1>Rediscover the Joys of Hiking Home: Exploring Nature's Pathways</h1>
 
-        <p>
-        Welcome to the world of hiking, where the journey becomes an adventure and the path leads you home. Hiking Home
-        is more than just a means of transportation; it's a transformative experience that reconnects us with the beauty
-        of nature, rejuvenates our spirits, and reminds us of the simplicity and wonders of life. Lace up your boots,
-        grab your backpack, and let's delve into the captivating realm of hiking that awaits us.
+            <p>
+                Welcome to the world of hiking, where the journey becomes an adventure and the path leads you home.
+                Hiking Home
+                is more than just a means of transportation; it's a transformative experience that reconnects us with
+                the beauty
+                of nature, rejuvenates our spirits, and reminds us of the simplicity and wonders of life. Lace up your
+                boots,
+                grab your backpack, and let's delve into the captivating realm of hiking that awaits us.
             </p>
 
-        <h3>The Call of the Trails</h3>
-        <p>
-        Hiking Home is an invitation to escape the hustle and bustle of everyday life, to trade the concrete jungle for
-        the untamed wilderness. Nature beckons us with its majestic landscapes, serene forests, cascading waterfalls,
-        and breathtaking vistas. From rugged mountains to meandering trails, each step along the path uncovers new
-        discoveries and offers a chance to immerse ourselves in the wonders of the natural world.
+            <h3>The Call of the Trails</h3>
+            <p>
+                Hiking Home is an invitation to escape the hustle and bustle of everyday life, to trade the concrete
+                jungle for
+                the untamed wilderness. Nature beckons us with its majestic landscapes, serene forests, cascading
+                waterfalls,
+                and breathtaking vistas. From rugged mountains to meandering trails, each step along the path uncovers
+                new
+                discoveries and offers a chance to immerse ourselves in the wonders of the natural world.
             </p>
 
-        <h3>Embarking on the Journey</h3>
-        <p>Every hiking adventure begins with careful preparation. Equip yourself with essential gear, pack sufficient
-        supplies, and choose the perfect trail for your desired experience. Whether you seek a leisurely day hike or a
-        multi-day expedition, there's a path for every skill level and interest. Research your destination, understand
-        the terrain, and let your inner explorer guide you towards your chosen route.
+            <h3>Embarking on the Journey</h3>
+            <p>Every hiking adventure begins with careful preparation. Equip yourself with essential gear, pack
+                sufficient
+                supplies, and choose the perfect trail for your desired experience. Whether you seek a leisurely day
+                hike or a
+                multi-day expedition, there's a path for every skill level and interest. Research your destination,
+                understand
+                the terrain, and let your inner explorer guide you towards your chosen route.
             </p>
 
-        <h3>Discovering Hidden Treasures</h3>
-        <p>
-        As you traverse the winding trails, a world of hidden treasures unfolds before you. Encounter an array of flora
-        and fauna, from vibrant wildflowers to elusive wildlife. Listen to the melodious symphony of birds and rustling
-        leaves, inhale the invigorating scent of pine, and feel the earth beneath your feet. Discover hidden waterfalls,
-        crystal-clear lakes, and secret viewpoints that reward your efforts and make every step worthwhile.
+            <h3>Discovering Hidden Treasures</h3>
+            <p>
+                As you traverse the winding trails, a world of hidden treasures unfolds before you. Encounter an array
+                of flora
+                and fauna, from vibrant wildflowers to elusive wildlife. Listen to the melodious symphony of birds and
+                rustling
+                leaves, inhale the invigorating scent of pine, and feel the earth beneath your feet. Discover hidden
+                waterfalls,
+                crystal-clear lakes, and secret viewpoints that reward your efforts and make every step worthwhile.
             </p>
-        <h3>The Joy of Solitude and Camaraderie</h3>
-        <p>
-        Hiking Home provides an opportunity for introspection and self-discovery. The solitude of the wilderness allows
-        you to disconnect from the noise of modern life and reconnect with your inner self. Find solace in the rhythmic
-        sound of your footsteps and embrace the serenity that surrounds you. Alternatively, share this experience with
-        kindred spirits by embarking on a group hike, forging new friendships, and creating lasting memories along the
-        trail.</p>
+            <h3>The Joy of Solitude and Camaraderie</h3>
+            <p>
+                Hiking Home provides an opportunity for introspection and self-discovery. The solitude of the wilderness
+                allows
+                you to disconnect from the noise of modern life and reconnect with your inner self. Find solace in the
+                rhythmic
+                sound of your footsteps and embrace the serenity that surrounds you. Alternatively, share this
+                experience with
+                kindred spirits by embarking on a group hike, forging new friendships, and creating lasting memories
+                along the
+                trail.</p>
 
-        <h3>Overcoming Challenges and Celebrating Victories</h3>
-        <p>
-        Hiking Home is not without its challenges. As you ascend steep slopes and conquer rugged terrains, you'll face
-        physical and mental obstacles. But with perseverance, determination, and a sense of adventure, you'll overcome
-        each hurdle and grow stronger with every step. Celebrate your victories, whether reaching the summit of a
-        towering peak or completing a long-distance trail. The sense of accomplishment and fulfillment that accompanies
-        each milestone is truly unparalleled.
-        </p>
+            <h3>Overcoming Challenges and Celebrating Victories</h3>
+            <p>
+                Hiking Home is not without its challenges. As you ascend steep slopes and conquer rugged terrains,
+                you'll face
+                physical and mental obstacles. But with perseverance, determination, and a sense of adventure, you'll
+                overcome
+                each hurdle and grow stronger with every step. Celebrate your victories, whether reaching the summit of
+                a
+                towering peak or completing a long-distance trail. The sense of accomplishment and fulfillment that
+                accompanies
+                each milestone is truly unparalleled.
+            </p>
 
-        <h3>Environmental Stewardship</h3>
-        <p>
-        As hikers, we have a responsibility to preserve and protect the natural environments we explore. Leave no trace
-        behind, respect wildlife and their habitats, and follow ethical hiking practices. By practicing sustainability
-        and environmental stewardship, we ensure that future generations can also experience the beauty of the trails we
-        traverse.
-        </p>
+            <h3>Environmental Stewardship</h3>
+            <p>
+                As hikers, we have a responsibility to preserve and protect the natural environments we explore. Leave
+                no trace
+                behind, respect wildlife and their habitats, and follow ethical hiking practices. By practicing
+                sustainability
+                and environmental stewardship, we ensure that future generations can also experience the beauty of the
+                trails we
+                traverse.
+            </p>
 
-        <p>
-        Hiking Home is a journey that rekindles our bond with nature, nourishes our souls, and allows us to find peace
-        amidst the chaos of the world. It's an opportunity to step away from the ordinary and embrace the extraordinary.
-        So, put on your hiking boots, embrace the call of the trails, and embark on an adventure that will lead you
-        home—to the heart of nature's enchantment. Let the trails be your guide as you forge unforgettable memories and
-        discover the true essence of hiking. Happy hiking!
-        </p>
+            <p>
+                Hiking Home is a journey that rekindles our bond with nature, nourishes our souls, and allows us to find
+                peace
+                amidst the chaos of the world. It's an opportunity to step away from the ordinary and embrace the
+                extraordinary.
+                So, put on your hiking boots, embrace the call of the trails, and embark on an adventure that will lead
+                you
+                home—to the heart of nature's enchantment. Let the trails be your guide as you forge unforgettable
+                memories and
+                discover the true essence of hiking. Happy hiking!
+            </p>
+        </div>
     </div>
 
 
