--- a/nationalPark.html
+++ b/nationalPark.html
@@ -21,6 +21,7 @@
 
 <body>
     <div class="main-content">
+        <div id="overlapping">
         <p>By Location</p>
         <select id="locationList">
             <option value="any">Select a Location</option>
@@ -29,8 +30,10 @@
         <select id="parkList">
             <option value="any">Select a Park Type</option>
         </select>
-        <img src="searchicon.svg" width="35">
+      
+       
         <input id="searchBox" type="text" placeholder="Search for park here">
+        </div>
 
         <ul id="searchOptions"></ul>
 
